--- a/installation/docker-slaves/docker-compose.yaml
+++ b/installation/docker-slaves/docker-compose.yaml
@@ -9,5 +9,11 @@ services:
     - ${HOME}/jenkins/jenkins-data:/var/jenkins_home
     networks:
     - net
+  remote_host:
+    container_name: remote-host
+    build:
+      context: centos7
+    networks:
+    - net
 networks:
   net:
