updated compose file

--- a/installation/aws-integration/docker-compose.yaml
+++ b/installation/aws-integration/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
   remote_host:
     container_name: remote-host
     image: docker-host
+    volumes:
+      - ${HOME}/jenkins/installation/aws-s3.sh:/tmp/aws-s3.sh
     build:
       context: .
     networks:
