--- a/installation/aws-integration/Dockerfile
+++ b/installation/aws-integration/Dockerfile
@@ -5,6 +5,7 @@ RUN yum install openssh-server -y && \
     mkdir /home/remote_user/.ssh && \
     chmod 700 /home/remote_user/.ssh
 COPY remote-key.pub /home/remote_user/.ssh/authorized_keys
+COPY aws-s3.sh /tmp/aws-s3.sh
 RUN chown remote_user:remote_user -R /home/remote_user/.ssh && \
     chmod 600 /home/remote_user/.ssh/authorized_keys && \
     yum -y install mysql && \
